# authservice

./: .env  README.md  alembic.ini  docker-compose.yml  pyproject.toml  requirements.txt
.github/workflows/: deploy.yml
alembic/: env.py
alembic/versions/: 0e9d754423c6_.py
backend/: .dockerignore
backend/config/: default.yaml  docker.yaml  local.yaml
backend/migrations/: env.py
backend/migrations/versions/: 0001_initial_auth_schema.py
backend/src/api/: deps.py  main.py
backend/src/api/v1/: schemas.py
backend/src/builder/: __init__.py  clients.py  helper.py  repo.py
backend/src/clients/: interfaces.py  jwt_client.py
backend/src/config/: config.py  server.py
backend/src/db/: models.py
backend/src/pkg/: db.py  logging.py  middlewares.py
backend/src/repositories/: interfaces.py  sqlalchemy.py
backend/src/services/: auth_service.py  authorization_service.py  bootstrap_service.py  integration_service.py
backend/src/worker/: main.py
config/: prod.yaml
frontend/: index.html
src/api/: main.py
src/api/v1/: __init__.py  auth.py  authorization.py  user.py
src/builder/: clients.py  factory.py  helper.py  repo.py  services.py
src/clients/: interfaces.py  jwt_client.py  kafka_client.py
src/config/: config.py
src/dto/: user.py
src/models/: user.py
src/pkg/: config.py  db.py  logging.py
src/repositories/: user.py
src/services/: user.py
