[project]
name = "authservice"
version = "0.1.0"
description = ""
authors = [
    {name = "Prashant Yadav"}
]
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "uvicorn (>=0.51.0,<0.52.0)",
    "kafka-python (>=3.0.8,<4.0.0)",
    "passlib (>=1.7.4,<2.0.0)",
    "pydantic (>=2.13.4,<3.0.0)",
]


[build-system]
requires = ["poetry-core>=2.0.0,<3.0.0"]
build-backend = "poetry.core.masonry.api"
